--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 38.68.135.19, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-377.3KB/s(Youtube:不良林), server: 38.114.114.49, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-267.2KB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇫🇷 法国-1.65MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林), server: 213.183.53.179, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 38.86.135.36, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.47MB/s(Youtube:不良林), server: 38.114.114.69, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 38.114.114.69, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
+      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-257.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
