--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.29MB/s(Youtube:不良林), server: 38.68.135.19, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-377.3KB/s(Youtube:不良林), server: 38.114.114.49, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-267.2KB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇫🇷 法国-1.65MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 保加利亚-925.4KB/s(Youtube:不良林), server: 213.183.63.218, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林), server: 213.183.53.198, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇳🇱 荷兰-1.02MB/s(Youtube:不良林), server: 213.183.59.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 38.68.134.85, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: 38.114.114.69, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.16MB/s(Youtube:不良林), server: 38.68.134.85, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-981.8KB/s(Youtube:不良林), server: 38.121.43.71, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-567.6KB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
+      - 保加利亚-925.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-981.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
+      - 保加利亚-925.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-981.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
+      - 保加利亚-925.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-981.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
+      - 保加利亚-925.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-981.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
+      - 保加利亚-925.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-981.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
+      - 保加利亚-925.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-981.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-377.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-267.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.65MB/s(Youtube:不良林)
+      - 保加利亚-925.4KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-981.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-567.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
